# Musical_bot_6.0

./: .gitignore
musical-bot/: Cargo.toml
musical-bot/src/: TOKEN  main.rs
