[package]
name = "musical-bot"
version = "0.1.0"
authors = ["TheK0tYaRa <alod123@mail.ua>"]
#description = " This is a Rust port of https://github.com/romenskiy2012/Musical_bot_6.0 "
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.songbird]
version = "0.1"
features = ["builtin-queue"]

[dependencies.serenity]
version = "0.10"
features = ["cache", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]